tools/tests/errors/json_malformed_obj.ki
discard import("json").loads("{bad}")
